# Fastapi-AI-Production-Template

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml  ruff.toml  skills-lock.json
.claude/skills/: cuml-machine-learning
.github/: dependabot.yml
.github/workflows/: format.yml  pytest.yml
app/: dependencies.py  logger.py  logging.py  logging_config.py  main.py  middleware.py  rate_limit.py
app/model/: kmeans_randomforest_model.py  model-randomforest.pkl  model.pkl  predict.py  train.py
app/routers/: RAG-chatbot.py  agent.py  agents.py  chatbot.py  example.py  feedback.py  mcp.py  predict.py
data/: books.csv
k8s/: deployment.yaml  hpa.yaml  ingres.yaml  ingress.yaml  service.yaml
notebook/: agentic-ai.ipynb  langgraph.ipynb
notebooks/: house-price-prediction-simple-solution-top-3.ipynb  iris-knn.ipynb  iris-randomforest.ipynb  langgraph.ipynb
notebooks/ai-agents/: agent-in-langchain.ipynb  intro-to-langgraph.ipynb  langgraph-app-2.ipynb
