[project]
name = "Fastapi AI Production Boilerplate"
version = "0.3.0"
description = "Simple starter repo for your Machine Learning/AI projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "loguru>=0.7.3",
    "uvicorn>=0.34.2",
]

[tool.uv.workspace]
members = [
    "test",
]
